kubernetes/apps/default/szurubooru/web/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: szurubooru-web
  labels:
    app.kubernetes.io/name: szurubooru-web
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: szurubooru-web
  ports:
    - name: http
      port: 80
      targetPort: http
